--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,46 +3,100 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - main
+      - develop
   pull_request:
+    branches:
+      - main
+      - develop
 
 permissions:
   actions: read
   contents: read
+  deployments: write
 
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           filter: tree:0
           fetch-depth: 0
 
-      
-      - uses: pnpm/action-setup@v4
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
         with:
           version: 9
-      
-      
 
-      # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      # Uncomment this line to enable task distribution
-      # - run: pnpm dlx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
-
-      
       # Cache node_modules
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
        
-      - run: pnpm install --frozen-lockfile
-      - uses: nrwl/nx-set-shas@v4
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+        
+      - name: Set up Nx SHAs
+        uses: nrwl/nx-set-shas@v4
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: pnpm exec nx-cloud record -- echo Hello World
-      # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
-      - run: pnpm exec nx affected -t lint test build
+      - name: Lint
+        run: pnpm exec nx affected -t lint --base=origin/main --head=HEAD --parallel=3
+
+      - name: Test with coverage
+        run: pnpm exec nx affected -t test --base=origin/main --head=HEAD --parallel=3 --configuration=ci --coverage
+
+      - name: Build
+        run: pnpm exec nx affected -t build --base=origin/main --head=HEAD --parallel=3
+
+      # Сохраняем отчеты о покрытии как артефакты
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: ./coverage/
+          retention-days: 7
+          
+      # Загрузка отчетов о покрытии в Codecov (опционально)
+      # Для работы требуется настройка секрета CODECOV_TOKEN
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     token: ""
+      #     directory: ./coverage/
+      #     fail_ci_if_error: false
+      #     verbose: true
+      #     flags: unit,integration
+      #     name: finance-platform
+
+  deploy-preview:
+    needs: main
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build web app
+        run: pnpm exec nx build web --configuration=production
+
+      # Здесь можно добавить шаг для деплоя preview версии, например, на Netlify или Vercel
+      - name: Deploy preview
+        run: echo "Deploy preview would go here"
