--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/express": "^5.0.1",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
@@ -44,6 +45,7 @@
     "@vitest/ui": "^3.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "express": "^5.1.0",
     "glob": "^11.0.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
@@ -67,8 +69,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^11.1.5",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "axios": "^1.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
