--- a/apps/web-e2e/tsconfig.json
+++ b/apps/web-e2e/tsconfig.json
@@ -4,7 +4,8 @@
     "allowJs": true,
     "outDir": "../../dist/out-tsc",
     "sourceMap": false,
-    "module": "commonjs"
+    "module": "commonjs",
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
   "include": [
     "**/*.ts",
