--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prepare": "husky",
     "schema:monitor": "node tools/schema-monitor/index.js",
-    "schema:generate": "node tools/schema-generator/index.js"
+    "schema:generate": "node tools/schema-generator/index.js",
+    "json-schema:generate": "nx build shared && node scripts/generate-json-schemas.js"
   },
   "private": true,
   "devDependencies": {
@@ -34,10 +35,13 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@types/testing-library__jest-dom": "^6.0.0",
@@ -60,24 +64,36 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "whatwg-fetch": "^3.6.20"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.3",
+    "@mswjs/data": "^0.16.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^11.1.5",
+    "@reduxjs/toolkit": "^2.7.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   }
