--- a/package.json
+++ b/package.json
@@ -75,7 +75,12 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mswjs/data": "^0.16.2",
+    "@mui/material": "^7.0.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
@@ -96,5 +101,10 @@
     "react-router-dom": "^7.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "apps\\web\\public"
+    ]
   }
 }
