--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -5,5 +5,15 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project web --web",
-  "targets": {}
+  "targets": {
+    "test": {
+      "executor": "@nx/vite:test",
+      "outputs": ["{options.reportsDirectory}"],
+      "options": {
+        "reportsDirectory": "../../coverage/apps/web",
+        "configFile": "apps/web/vite.config.ts",
+        "passWithNoTests": true
+      }
+    }
+  }
 }
