--- a/apps/web/tsconfig.spec.json
+++ b/apps/web/tsconfig.spec.json
@@ -2,14 +2,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node", "@testing-library/jest-dom"],
+    "types": ["node", "@testing-library/jest-dom"],
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "jest.config.ts",
+    // "jest.config.ts", // Removed as it's Jest-specific
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
@@ -20,5 +19,5 @@
     "src/**/*.spec.jsx",
     "src/**/*.d.ts"
   ],
-  "files": ["src/types/testing-library-jest-dom.d.ts", "src/types/jest.d.ts"]
+  "files": ["src/types/testing-library-jest-dom.d.ts"]
 }
